--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -11,9 +11,9 @@
  .headerBar {
    display: flex;
    justify-content: center;
-   overflow-x: hidden;
+   /* overflow-x: hidden; */
    width: 100%;
-   height: .5em;
+   height: .9em;
    transition: 500ms;
  }
 
