--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -11,7 +11,6 @@
  .headerBar {
    display: flex;
    justify-content: space-between;
-   align-items: bottom;
    overflow-x: hidden;
    width: 100%;
    height: 1.75em;
@@ -27,7 +26,8 @@
   font-size: 1em;
   transition: 500ms;
   padding-right: 1em;
-  align-self: center;
+  align-self: top;
+  margin: 0;
  }
 
  .headerBar:hover .headerTitle{
