--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -16,6 +16,11 @@
    height: 1.75em;
    transition: 400ms;
    overflow-y:hidden;
+   box-shadow:
+   0 4px 4px rgba(0, 0, 0, 0.25),
+   0 8px 8px rgba(0, 0, 0, 0.20),
+   0 12px 12px rgba(0, 0, 0, 0.15),
+   0 16px 16px rgba(0, 0, 0, 0.10);
  }
 
 .headerBar:hover {
