--- a/public/index.css
+++ b/public/index.css
@@ -13,9 +13,9 @@
    justify-content: space-between;
    overflow-x: hidden;
    width: 100%;
-   height: 1.75em;
+   height: 2.75em;
    transition: 400ms;
-   overflow-y:hidden;
+   overflow-y: hidden;
    box-shadow:
    0 4px 4px rgba(0, 0, 0, 0.25),
    0 8px 8px rgba(0, 0, 0, 0.20),
@@ -28,7 +28,7 @@
  }
 
  .headerTitle {
-  font-size: 1.3em;
+  font-size: 2.3em;
   transition: 550ms;
   padding-right: 1em;
   align-self: top;
@@ -42,16 +42,19 @@
  }
 
  .headerIcon {
+  position: relative;
+  right: 20px;
   aspect-ratio: 1.5 / 1;
   padding-left: 0;
-  width: 5em;
+  width: 7em;
   margin: 0;
-  transition: margin 400ms ease, width 400ms ease;
+  transition: 350ms;
  }
 
  .headerBar:hover .headerIcon {
-  width: 10em;
-  margin: 0;
+  width: 12em;
+  cursor: pointer;
+  right:30px;
  }
 
  .headerButton {
@@ -117,7 +120,7 @@
 
  .taskOptions {
   background: rgba(150,150,150,.3);
-  transition: 400ms ease;
+  transition: 600ms ease;
  }
 
  .taskOptions:hover {
